added fallback mobile message and handle out of viewport logic for pin finder modal

--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1628,9 +1628,10 @@
     "app.accountmanager": "Gestionnaire de compte pour:",
     "app.optionsmenu": "Menu d'options",
     "app.guidedtour._componentTypeDisplayName": "Visite guidée",
-    "app.pagemenu": "Menu de la page",
     "app.coursemenu": "Menu du cours",
-    "app.componentmenu": "Menu du composant",
+    "app.pagemenu": "Menu de la page",
+    "app.articlemenu": "Menu de l'article",
     "app.blockmenu": "Menu du bloc",
-    "app.articlemenu": "Menu de l'article"
+    "app.componentmenu": "Menu du composant",
+    "app.pinfinder.mobilefallbackmessage": "Il n'est pas possible d'utiliser le dispositif de repérage de d'épingle en raison de la faible largeur de l'appareil."
 }
