--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -558,9 +558,10 @@
   "app.scaffold._items._pin.top.label": "Step Position - Top",
   "app.scaffold._items._pin.bubbledirection.label": "Bubble Direction",
   "app.scaffold._items._pin.bordercolor.label": "Border Color",
-  "app.pagemenu": "Page menu",
   "app.coursemenu": "Course menu",
-  "app.componentmenu": "Component menu",
+  "app.pagemenu": "Page menu",
+  "app.articlemenu": "Article menu",
   "app.blockmenu": "Block menu",
-  "app.articlemenu": "Article menu"
+  "app.componentmenu": "Component menu",
+  "app.pinfinder.mobilefallbackmessage": "The pin finder cannot be used due to the narrow width."
 }
