WIP added warning message and reset pin coordinates if image is too large

--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -573,6 +573,7 @@
   "app.scaffold._bubbledirection.right.variable": "right",
   "app.scaffold._bubbledirection.top.variable": "top",
   "app.scaffold._bubbledirection.bottom.variable": "bottom",
-  "app.scaffold.component._pin._bordercolor.label": "Bubble Border Color"
+  "app.scaffold.component._pin._bordercolor.label": "Bubble Border Color",
+  "app.pinfinder.imgtoohighwarning": "Warning: The image's height exceeds the acceptable range, prompting a reset of the coordinates to 0 on the pin editor."
 
 }
