--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -565,13 +565,14 @@
   "app.componentmenu": "Component menu",
   "app.pinfinder.mobilefallbackmessage": "The pin editor cannot be used due to the narrow width.",
   "app.pinfinder.error": "You must select an image as graphic src to use the pin editor.",
+  "app.pineditor": "Pin Editor",
   "app.top": "Top",
   "app.scaffold.component._pin._bubbledirection.label": "Bubble Direction",
-  "app.scaffold.component._pin._bordercolor.label": "Bubble Border Color",
-  "app.scaffold._bubbledirection.top.variable": "top",
-  "app.scaffold._bubbledirection.right.variable": "right",
   "app.scaffold._bubbledirection.none.variable": "none",
   "app.scaffold._bubbledirection.left.variable": "left",
+  "app.scaffold._bubbledirection.right.variable": "right",
+  "app.scaffold._bubbledirection.top.variable": "top",
   "app.scaffold._bubbledirection.bottom.variable": "bottom",
-  "app.pineditor": "Pin Editor"
+  "app.scaffold.component._pin._bordercolor.label": "Bubble Border Color",
+  "app.pinfinder.imgtoohighwarning": "Warning: The image's height exceeds the acceptable range, prompting a reset of the coordinates to 0 on the pin editor."
 }
