--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1636,7 +1636,8 @@
     "app.pinfinder.mobilefallbackmessage": "Il n'est pas possible d'utiliser l'éditeur d'épingle en raison de la faible largeur de l'appareil.",
     "app.pinfinder.error": "Vous devez sélectionner une image comme source graphique pour utiliser l'éditeur d'épingle.",
     "app.top": "Haut",
+    "app.pineditor": "Éditeur d'épingle",
     "app.scaffold.component._graphic._forceFullWidth.label": "Élargir à la pleine largeur",
     "app.scaffold.component._graphic._forceFullWidth.help": "Élargir à la pleine largeur",
-    "app.pineditor": "Éditeur d'épingle"
+    "app.pinfinder.imgtoohighwarning": "Avertissement: La hauteur de l'image dépasse la plage acceptable, ce qui entraîne une réinitialisation des coordonnées à 0 dans l'éditeur d'épingle."
 }
