--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1639,5 +1639,5 @@
     "app.pineditor": "Éditeur d'épingle",
     "app.scaffold.component._graphic._forceFullWidth.label": "Élargir à la pleine largeur",
     "app.scaffold.component._graphic._forceFullWidth.help": "Élargir à la pleine largeur",
-    "app.pinfinder.imgtoohighwarning": "Avertissement: La hauteur de l'image dépasse la plage acceptable, ce qui entraîne une réinitialisation des coordonnées à 0 dans l'éditeur d'épingle."
+    "app.pinfinder.imgtoohighwarning": "La hauteur de l'image dépasse la limite de l'éditeur d'épingle. L'éditeur d'épingle fonctionnera toujours, mais l'épingle ne pourra pas être réinitialisée automatiquement à sa position précédente."
 }
