--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -574,6 +574,7 @@
   "app.scaffold._bubbledirection.top.variable": "top",
   "app.scaffold._bubbledirection.bottom.variable": "bottom",
   "app.scaffold.component._pin._bordercolor.label": "Bubble Border Color",
-  "app.pinfinder.imgtoohighwarning": "The image height exceeds the pin editor's limit. The pin editor will still function, but the pin cannot be automatically reset to its previous position."
+  "app.pinfinder.imgtoohighwarning": "The image height exceeds the pin editor's limit. The pin editor will still function, but the pin cannot be automatically reset to its previous position.",
+  "app.hotgraphicpinfinder.error": "You must select an image as main hotgraphic src to use the pin editor."
 
 }
