WIP fixed french translations

--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -305,11 +305,12 @@
     "app.scaffold.screenSize": "Taille de l’écran",
     "app.scaffold._logging": "Connexion",
     "app.scaffold._scrollingContainer": "Conteneur de défilement",
-    "app.scaffold.component.properties._items.gmcq.label": "Éléments",
+    "app.scaffold.component.properties._items.gmcq.label": "Réponses",
+    "app.scaffold.component.properties._items.gmcq.help": "Les réponses possibles proposées à l’apprenant",
     "app.scaffold.component.properties._attempts.label": "Essais",
     "app.scaffold.component.properties._attempts.help": "Nombre d’essais permis",
     "app.scaffold.component.properties._canShowModelAnswer.label": "Afficher la réponse modèle",
-    "app.scaffold.component.properties._canShowModelAnswer.help": "Lorsqu’activée, cette option permet d’afficher la bonne réponse si la réponde est incorrecte.",
+    "app.scaffold.component.properties._canShowModelAnswer.help": "Lorsqu’activée, cette option permet d’afficher la bonne réponse si la réponse est incorrecte.",
     "app.scaffold.component.properties._canShowFeedback.label": "Afficher la rétroaction",
     "app.scaffold.component.properties._canShowMarking.label": "Afficher le pointage",
     "app.scaffold.component.properties._shouldDisplayAttempts.label": "Afficher le nombre d’essais effectués",
@@ -1089,7 +1090,7 @@
     "app.saveandedit": "Enregistrement en cours…",
     "app.done": "Terminer",
     "app.continue": "Continuer",
-    "app.cancel": "Annnuler",
+    "app.cancel": "Annuler",
     "app.apply": "Appliquer",
     "app.reset": "Réinitialiser",
     "app.confirmduplicate": "Êtes-vous certain de vouloir dupliquer ce cours afin de pouvoir le modifier localement?",
