added missing french translations associated with the Talk component

--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1717,5 +1717,27 @@
     "app.zoneeditor": "Éditeur de zone",
     "app.width": "Largeur",
     "app.height": "Hauteur",
-    "app.simulationzonefinder.error" : "Vous devez sélectionner une image comme src de l'écran pour utiliser l'éditeur de zone."
+    "app.simulationzonefinder.error" : "Vous devez sélectionner une image comme src de l'écran pour utiliser l'éditeur de zone.",
+    "app.adapt-esdc-talk.displayName": "Dialogue",
+    "app.adapt-esdc-talk.description": "Composant de dialogue",
+    "app.scaffold.component.properties._characters.label": "Personnages de dialogue",
+    "app.scaffold.component._characters.name.label": "Nom",
+    "app.scaffold.component._characters.name.help": "Le nom du personnage",
+    "app.scaffold._items.name.label": "Nom",
+    "app.scaffold._items.image.label": "Image",
+    "app.scaffold.component._characters.position.label": "Sélectionnez la position pour le personnage et son message texte. Vous pouvez choisir de les afficher à gauche ou à droite.",
+    "app.scaffold.position.left.variable": "gauche",
+    "app.scaffold.position.right.variable": "droite",
+    "app.scaffold.component._characters._graphic.label": "Image",
+    "app.scaffold.component._characters._classes.label": "Classes",
+    "app.scaffold.component._characters._classes.help": "La ou les classes CSS (feuilles de style en cascade) à ajouter à l’élément du bloc",
+    "app.scaffold.component.properties._items.talk.label": "Messages de dialogue",
+    "app.scaffold._items.character.label": "Personnage",
+    "app.scaffold.component.talk._character.label": "Personnage",
+    "app.scaffold.component.talk._character.help": "Sélectionnez le personnage qui sera associé à votre message.",
+    "app.scaffold.component.talk.text.label": "Texte",
+    "app.scaffold.component.talk.text.help": "Le texte du message de dialogue",
+    "app.scaffold.component.talk._graphic.label": "Image",
+    "app.scaffold.component.talk._classes.label": "Classes",
+    "app.scaffold.component.talk._classes.help": "La ou les classes CSS (feuilles de style en cascade) à ajouter à l’élément du bloc"
 }
