simulation translations update

--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -579,5 +579,8 @@
   "app.zoneeditor": "Zone Editor",
   "app.width": "Width",
   "app.height": "Height",
-  "app.simulationzonefinder.error": "You must select an image as main screen src to use the zone editor."
+  "app.simulationzonefinder.error": "You must select an image as main screen src to use the zone editor.",
+  "app.scaffold._setCompletionOn.actionSuccess.variable": "Trigger on action success",
+  "app.scaffold._actionType.select.variable" : "dropdown menu",
+  "app.readableID": "ID Lisible"
 }
