--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -575,6 +575,9 @@
   "app.scaffold._bubbledirection.bottom.variable": "bottom",
   "app.scaffold.component._pin._bordercolor.label": "Bubble Border Color",
   "app.pinfinder.imgtoohighwarning": "The image height exceeds the pin editor's limit. The pin editor will still function, but the pin cannot be automatically reset to its previous position.",
-  "app.hotgraphicpinfinder.error": "You must select an image as main hotgraphic src to use the pin editor."
-
+  "app.hotgraphicpinfinder.error": "You must select an image as main hotgraphic src to use the pin editor.",
+  "app.scaffold.component.properties.instruction.label": "Instructions",
+  "app.scaffold.component.properties._selectable.label": "Number of Selectable Answers",
+  "app.scaffold.component.properties._selectable.help": "How many answer(s) are selectable when the learner answers the question.",
+  "app.clone": "Clone"
 }
