translations for simulation globals

--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1912,5 +1912,26 @@
   "app.scaffold._items.matchWithRegex.label": "Correspondre avec une expression rationnelle (regex)",
   "app.scaffold._items.correctOption.label": "Option correcte",
   "app.scaffold._items.selectedByDefault.label": "Sélectionné par défaut",
-  "app.scaffold.component._graphic._forceFullWidth.help": "Force l'image à prendre toute la largeur disponible sur la page."
+  "app.scaffold.component._graphic._forceFullWidth.help": "Force l'image à prendre toute la largeur disponible sur la page.",
+  "app.scaffold.course._guidedtour.stepPagination.label": "Pagination des étapes",
+  "app.scaffold.course._guidedtour.stepPagination.help": "Il s'agit de l'étiquette utilisée pour chaque élément. Utilisez {{itemNumber} et {{totalItems}} dans votre texte pour indiquer à l'utilisateur l'élément qu'il consulte et le nombre total d'éléments.",
+  "app.scaffold.course._guidedtour.stepPaginationAria.label": "Étiquette ARIA pagination des étapes",
+  "app.scaffold.course._guidedtour.stepPaginationAria.help": "Il s'agit de l'étiquette ARIA utilisée pour chaque élément. Utilisez {{itemNumber} et {{totalItems}} dans votre texte pour indiquer à l'utilisateur l'élément qu'il consulte et le nombre total d'éléments.",
+  "app.scaffold.course._simulation.simulationWindow.label": "Région ARIA Fenêtre de simulation",
+  "app.scaffold.course._simulation.simulationControls.label": "Région ARIA Contrôles de simulation",
+  "app.scaffold.course._simulation.startSimulation.label": "Texte du bouton Débuter la simulation",
+  "app.scaffold.course._simulation.restartSimulation.label": "Texte du bouton Redémarrer la simulation",
+  "app.scaffold.course._simulation.goBack.label": "Étiquette du bouton Retour",
+  "app.scaffold.course._simulation.showInstructions.label": "Étiquette du bouton Afficher les instructions",
+  "app.scaffold.course._simulation.exitSimulation.label": "Étiquette du bouton Quitter la simulation",
+  "app.scaffold.course._simulation.fullScreen.label": "Étiquette du bouton Plein écran",
+  "app.scaffold.course._simulation.mobileMessage.label": "Message d'erreur sur les appareils mobiles",
+  "app.scaffold.course._simulation.remainingCharacters.label": "Étiquette Caractères restants",
+  "app.scaffold.course._simulation.remainingCharacters.help": "Il s'agit de l'étiquette utilisée pour les compteurs de caractères. Utilisez {{_characterCounterLimit}} dans votre texte pour afficher le nombre de caractères restants.",
+  "app.scaffold.course._simulation.incorrectFallback.label": "Message de rechange de rétroaction erroné",
+  "app.scaffold.course._simulation.issuesDetected.label": "Étiquette Problèmes détectés dans le formulaire",
+  "app.scaffold.course._simulation.youEntered.label": "Étiquette de saisie de l'utilisateur",
+  "app.scaffold.course._simulation.youEntered.help": "Il s'agit de l'étiquette utilisée pour afficher ce que l'utilisateur a saisi dans la rétroaction. Utilisez {{userValue}} dans votre texte pour afficher les données saisies par l'utilisateur.",
+  "app.scaffold.course._simulation.inputEmpty.label": "Étiquette de non-saisie de l'utilisateur",
+  "app.scaffold.course._simulation.noOptionSelected.label": "Étiquette de non-sélection par l'utilisateur"
 }
