--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1934,5 +1934,10 @@
   "app.scaffold.course._simulation.youEntered.label": "Étiquette de saisie de l'utilisateur",
   "app.scaffold.course._simulation.youEntered.help": "Il s'agit de l'étiquette utilisée pour afficher ce que l'utilisateur a saisi dans la rétroaction. Utilisez {{userValue}} dans votre texte pour afficher les données saisies par l'utilisateur.",
   "app.scaffold.course._simulation.inputEmpty.label": "Étiquette de non-saisie de l'utilisateur",
-  "app.scaffold.course._simulation.noOptionSelected.label": "Étiquette de non-sélection par l'utilisateur"
+  "app.scaffold.course._simulation.noOptionSelected.label": "Étiquette de non-sélection par l'utilisateur",
+  "app.scaffold.course._simulation.actionNotCompleted.label": "Étiquette d'action non complétée",
+  "app.scaffold.component._form._clickFormBlocking.label": "Bloquer l'envoi du formulaire pour ce clic",
+  "app.scaffold.component._form._clickFormBlocking.help": "Cette option bloque l'envoi du formulaire pour cette action et renvoie le message d'erreur dans la rétroaction du formulaire.",
+  "app.scaffold.component._form.clickFailure.label": "Méssage d'échec de clic",
+  "app.scaffold.component._form.clickFailure.help": "Expliquez aux apprenants pourquoi ce clic est nécessaire à ce stade."
 }
