--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -409,7 +409,7 @@
   "app.titleunlock": "Unlink from title",
   "app.stopsharingwithyourself": "You cannot remove yourself from this list.<br/><br/>If you want to stop sharing this course with yourself, please use another user account.",
   "app.searchByMail": "Search by email",
-  "app.maxfileuploadsize": "Maximum upload file size:",
+  "app.maxfileuploadsize": "Maximum upload file size: %{size}. <br> Exceptions:",
   "app.uploadsizeerror": "File size limit exceeded",
   "app.fileuploaderror": "File upload failed.",
   "app.cannotfindbower": "Cannot find expected bower.json file in the plugin root, please check the structure of your zip file and try again.",
