added missing translations for talk component fields

--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1724,7 +1724,7 @@
   "app.scaffold.component._characters.name.help": "Le nom du personnage",
   "app.scaffold._items.name.label": "Nom",
   "app.scaffold._items.image.label": "Image",
-  "app.scaffold.component._characters.position.label": "Sélectionnez la position pour le personnage et son message texte. Vous pouvez choisir de les afficher à gauche ou à droite.",
+  "app.scaffold.component._characters.position.help": "Sélectionnez la position pour le personnage et son message texte. Vous pouvez choisir de les afficher à gauche ou à droite.",
   "app.scaffold.position.left.variable": "gauche",
   "app.scaffold.position.right.variable": "droite",
   "app.scaffold.component._characters._graphic.label": "Image",
@@ -1737,6 +1737,8 @@
   "app.scaffold.component.talk.text.label": "Texte",
   "app.scaffold.component.talk.text.help": "Le texte du message de dialogue",
   "app.scaffold.component.talk._graphic.label": "Image",
+  "app.scaffold.component.talk._mp3.label": "Lien MP3",
+  "app.scaffold.component.talk._mp3.help": "Lien vers un fichier audio MP3",
   "app.scaffold.component.talk._classes.label": "Classes",
   "app.scaffold.component.talk._classes.help": "La ou les classes CSS (feuilles de style en cascade) à ajouter à l’élément du bloc",
   "app.scaffold.component.properties._setCompletionOnMobile.label": "Définir l'achèvement sur un appareil mobile ",
