--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -582,5 +582,6 @@
   "app.simulationzonefinder.error": "You must select an image as main screen src to use the zone editor.",
   "app.scaffold._setCompletionOn.actionSuccess.variable": "Trigger on action success",
   "app.scaffold._actionType.select.variable" : "dropdown menu",
-  "app.readableID": "Readable ID"
+  "app.readableID": "Readable ID",
+  "app.erroritemtoremoveinuse": "The item you wish to delete is in use."
 }
