--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1881,7 +1881,7 @@
   "app.scaffold.component._childItems._isFailure.help": "Sélectionnez cette option si vous souhaitez que l'élément soit interactif mais qu'il serait incorrect pour les apprenants de le sélectionner.",
   "app.scaffold.component._childItems._inputType.label": "Type d'action de saisie",
   "app.scaffold.component._childItems._inputType.help": "Sélectionnez le type de saisie correspondant à l'élément à l'écran.",
-  "app.scaffold.component._childItems._goTo.label": "GoTo",
+  "app.scaffold.component._childItems._goTo.label": "Emplacement de destination",
   "app.scaffold.component._childItems._goTo.help": "Choisissez l'écran à charger en cas de réussite de cet élément.",
   "app.scaffold.component._childItems._form.label": "Éléments du formulaire",
   "app.scaffold.component._childItems._fontSize.label": "Taille de la police",
