added translations for labels used in dnd multiple component

--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1945,5 +1945,26 @@
   "app.erroritemtoremoveinuse": "L'élément que vous souhaitez supprimer est en cours d'utilisation.",
   "app.clone": "Cloner",
   "app.adapt-esdc-talk.displayName": "Dialogue",
-  "app.adapt-esdc-talk.description": "Composant de dialogue"
+  "app.adapt-esdc-talk.description": "Composant de dialogue",
+  "app.adapt-esdc-dnd-multiple.displayName": "Glisser-déposer de multiples",
+  "app.adapt-esdc-dnd-multiple.description": "Un simple composant « glisser-déposer multiple »",
+  "app.scaffold.component.properties.ariaQuestion.label": "Question ARIA",
+  "app.scaffold.component.properties.ariaQuestion.help": "Les lecteurs d'écran liront ce texte au lieu de lire les champs « Titre affiché », « Corps » et « Instruction » lorsqu'ils se concentrent sur les options. Pour être clair et concis, veillez à ce que le texte n'englobe que la question associée.",
+  "app.scaffold.component.properties._items.dnd-multiple.label": "Éléments",
+  "app.scaffold._items.itemDragOptions.label": "Options de glissement des éléments",
+  "app.scaffold.component.dnd-multiple.title.label": "Titre",
+  "app.scaffold.component.dnd-multiple.title.help": "Texte du titre affiché au-dessus de l'élément",
+  "app.scaffold.component.dnd-multiple._options.label": "Options de glissement des éléments",
+  "app.scaffold._items._graphic.isBackground.label": "Est à l'arrière-plan",
+  "app.scaffold.component._graphic.isBackground.label": "Est à l'arrière-plan",
+  "app.scaffold.component._graphic.isBackground.help": "Si cette option est activée, l'image sera utilisée comme image d'arrière-plan au lieu d'une image en ligne.",
+  "app.scaffold.component._options.title.label": "Texte de l'option",
+  "app.scaffold.component._options._graphic.label": "Image",
+  "app.scaffold.component.properties._useStrictOrder.label": "Utiliser un ordre strict",
+  "app.scaffold.component.properties._hasItemScoring.label": "Notation des éléments",
+  "app.scaffold.component.properties._hasItemScoring.help": "Lorsqu'elle est désactivée, cette question obtient un score de 0 pour une réponse incorrecte et une « pondération de la question  » pour une réponse correcte. Lorsqu'elle est activée, cette question est notée en additionnant les notes des options sélectionnées.",
+  "app.scaffold.component.properties._startText.label": "Titre de la première colonne de l'élément",
+  "app.scaffold.component.properties._startText.help": "Texte qui sera affiché dans la première colonne de l'élément.",
+  "app.scaffold.component.properties._itemMinHeight.label": "Hauteur minimale de l'élément",
+  "app.scaffold.component.properties._itemMinHeight.help": "Hauteur minimale de l'élément. Si elle est fixée à 0, la hauteur sera calculée automatiquement."
 }
